infrastructure/ingress/traefik/traefik.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    k8s-app: traefik-ingress-lb
  name: traefik
  namespace: kube-system
spec:
  selector:
    matchLabels:
      k8s-app: traefik-ingress-lb
      name: traefik-ingress-lb
  template:
    metadata:
      labels:
        k8s-app: traefik-ingress-lb
        name: traefik-ingress-lb
      annotations:
        backup.velero.io/backup-volumes-excludes: traefik-data
    spec:
      containers:
        - args:
            - --api
            - --log.level=DEBUG
            - --api.insecure=true
            - --api.dashboard=true
            - --accesslog
            - --global.checknewversion=true
            - --entrypoints.traefik.address=:8080
            - --entryPoints.web.address=:80
            - --entryPoints.websecure.address=:443
            - --entrypoints.web.http.redirections.entryPoint.to=websecure
            - --entrypoints.websecure.http.tls.certResolver=default
            - --ping=true
            - --providers.kubernetescrd=true
            - --providers.kubernetesingress=true
            - --certificatesresolvers.default.acme.storage=/traefik-data/acme.json
            - --certificatesresolvers.default.acme.tlschallenge=true
            - --certificatesresolvers.default.acme.caserver=https://acme-v02.api.letsencrypt.org/directory
            - --certificatesresolvers.default.acme.email=admin@serubin.net
            - --entrypoints.ssh.address=:2222
          image: traefik:v2.10
          name: traefik-ingress-lb
          volumeMounts:
            - name: traefik-data
              mountPath: /traefik-data
          ports:
            - containerPort: 80
              hostPort: 80
              name: web
            - containerPort: 443
              hostPort: 443
              name: websecure
            - containerPort: 2222
              hostPort: 2222
              name: ssh
            - name: admin
              containerPort: 9000
              hostPort: 9000
            - name: traefik
              containerPort: 8080
              hostPort: 8080
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
      serviceAccountName: traefik-ingress-controller
      terminationGracePeriodSeconds: 60
      volumes:
        - name: traefik-data
          persistentVolumeClaim:
            claimName: traefik-data
