infrastructure/ingress/traefik/dashboard.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: kube-system

spec:
  ports:
    - name: web
      targetPort: 8080
      port: 8080
  selector:
    app: traefik
